# devbox

./: .gitignore  DEVBOX.md  Makefile  pyproject.toml
config/: devbox.yaml
scripts/: deploy.sh
src/devbox/: auth.py  config.py  main.py
src/devbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/devbox/actions/: restart.py
src/devbox/collectors/: info.py  system.py
src/devbox/services/: systemd.py
tests/: test_auth.py  test_auth_restart.py  test_info.py  test_services.py  test_system_collector.py
